day 3, solution is a little more rough. abandoned using views because they are not easy to compose in stages.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,11 @@ add_executable(
   day2.cc
 )
 
+add_executable(
+  day3
+  day3.cc
+)
+
 # target_link_libraries(
 #   gtest_main
 #   gmock_main
